--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
 			<header id="header">
 				<div class="inner">
 					<center><a href="#" class="image avatar"><img src="images/avatar.png" alt="" /></a></div</center>
-					<h1><strong>Hey there! &#x1F44B; <br> My name is Kyela</strong>, data analyst well versed in SQL, Python, Tableau, Spreadsheet</h1>
+					<h1>Hey there! &#x1F44B; <br> <stronger>My name is Kyela</stronger>, and I am a data enthusiast. I am always eager to learn new skills and stay up to date with the latest trends and technologies in the field. With my strong analytical skills and attention to detail, I can identify patterns and trends in complex data sets and provide actionable recommendations.<br><br>
+						#dataanalysis #businessintelligence #SQL #analytics
+						</h1>
 				</div>
 			</header>
 
