--- a/index.html
+++ b/index.html
@@ -53,8 +53,14 @@
 								<h3><a href="https://kyelasantos.github.io/pizzashopdashboard/" target= "_blank">Pizza Shop Sales Dashboard</a></h3>
 								<p>For this project, I'll assume the role of a data analyst for a fictional pizza place in New Jersey. I will help the restaurant use data to improve operations.</p>
 							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
+								<h3><a href="https://kyelasantos.github.io/telco-churn-analysis/" target= "_blank">Telecom Company Service Performance Analysis</a></h3>
+								<p>This is a Telecom Company Service Performance Analysis using customer records associated with a fictional Telecom Company Dataset. This is done in Power BI.</p>
+							</article>
 						</div>
 					</section>
+					
 
 
 				<!-- Four -->
